--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Advanced Components</title>
+		<title>Tom Hessburg Advanced Components</title>
 		<link rel="stylesheet" href="./CSS/index.css">
 	</head>
 	<body>
