MVP met... goingto study this for a while before moving to stretch however, its a bit of a puzzle

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-		
+
 		<div class="header-container">
 			<div class="dropdown">
 				<div class="dropdown-button">Dropdown</div>
@@ -62,6 +62,8 @@
 						<div class="tabs-link" data-tab="2">Tab 2</div>
 						<div class="tabs-link" data-tab="3">Tab 3</div>
 						<div class="tabs-link" data-tab="4">Tab 4</div>
+						<div class="tabs-link" data-tab="5">Tab 5</div>
+						<div class="tabs-link" data-tab="6">Tab 6</div>
 					</div>
 					<div class="tabs-items">
 						<div class="tabs-item tabs-item-selected" data-tab="1">
@@ -88,6 +90,7 @@
 								you may meet from time to time are merely the products of a deranged imagination.
 							</div>
 						</div>
+
 						<div class="tabs-item" data-tab="4">
 							<div class="tabs-item-title">Quote 4</div>
 							<div class="tabs-item-description">
@@ -96,6 +99,22 @@
 								that this has already happened.
 							</div>
 						</div>
+						<div class="tabs-item" data-tab="5">
+							<div class="tabs-item-title">Quote 5</div>
+							<div class="tabs-item-description">
+								Persistence is omnipotent...
+							</div>
+						</div>
+						<div class="tabs-item" data-tab="6">
+							<div class="tabs-item-title">Quote 5</div>
+							<div class="tabs-item-description">
+								Diarehea is not...
+							</div>
+						</div>
+						
+
+						
+
 					</div>
 				</div>
 			</div>
