--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="header-container">
 			<div class="dropdown">
 				<div class="dropdown-button">Dropdown</div>
-				<div class="dropdown-content dropdown-hidden">
+				<div class="dropdown-content dropdown-hidden dropdown-animate-off">
 					<a class="dropdown-link" href="https://lambdaschool.com/" target="_blank">Lambda</a>
 					<a class="dropdown-link" href="https://www.google.com/" target="_blank">Google</a>
 					<a class="dropdown-link" href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a>
